--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title> Моє Портфоліо </title>
+        <link rel="stylesheet" type="text/css" href="style1.css" />
     </head>
     <body>
         <header>
